--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: myc
 Type: Package
-Title: What the Package Does in One 'Title Case' Line
+Title: My Rcpp
 Version: 1.0
 Date: 2020-04-15
-Author: Your Name
-Maintainer: Your Name <your@email.com>
-Description: One paragraph description of what the package does as one or more full sentences.
+Author: Ben Denis Shaffer
+Maintainer: Ben Denis Shaffer <bendenisshaffer@gmail.com>
+Description: Functions implimented using Rcpp.
 License: GPL (>= 2)
 Imports: Rcpp (>= 1.0.3)
 LinkingTo: Rcpp
